--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ if (AL_HAS_CUDA)
   set_source_path(TEST_CUDA_HDRS cuda_vector.hpp)
 endif ()
 if (AL_HAS_MPI_CUDA)
-  #set_source_path(TEST_MPI_CUDA_HDRS test_utils_mpi_cuda.hpp)
+  set_source_path(TEST_MPI_CUDA_HDRS test_utils_mpi_cuda.hpp)
 endif ()
 if (AL_HAS_HOST_TRANSFER)
   set_source_path(TEST_HOST_TRANSFER_HDRS test_utils_ht.hpp)
@@ -71,12 +71,16 @@ if (AL_HAS_CUDA AND NOT AL_HAS_ROCM)
   target_link_libraries(test_stream_mem_ops.exe PUBLIC cuda)
 endif ()
 
-#if (AL_HAS_MPI_CUDA_RMA AND NOT AL_HAS_ROCM)
-#  add_executable(test_rma_ring.exe test_rma_ring.cpp ${TEST_HEADERS})
-#  target_link_libraries(test_rma_ring.exe PRIVATE Al)
-#  target_link_libraries(test_rma_ring.exe PUBLIC cuda)
-#  add_executable(test_rma_halo_exchange.exe
-#    test_rma_halo_exchange.cpp ${TEST_HEADERS})
-#  target_link_libraries(test_rma_halo_exchange.exe PRIVATE Al)
-#  target_link_libraries(test_rma_halo_exchange.exe PUBLIC cuda)
-#endif ()
+if (AL_HAS_MPI_CUDA_RMA AND NOT AL_HAS_ROCM)
+  add_executable(test_rma_ring.exe test_rma_ring.cpp ${TEST_HEADERS})
+  target_include_directories(
+    test_rma_ring.exe SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/third_party/cxxopts/include)
+  target_link_libraries(test_rma_ring.exe PRIVATE Al)
+  target_link_libraries(test_rma_ring.exe PUBLIC cuda)
+  add_executable(test_rma_halo_exchange.exe
+    test_rma_halo_exchange.cpp ${TEST_HEADERS})
+  target_include_directories(
+    test_rma_halo_exchange.exe SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/third_party/cxxopts/include)
+  target_link_libraries(test_rma_halo_exchange.exe PRIVATE Al)
+  target_link_libraries(test_rma_halo_exchange.exe PUBLIC cuda)
+endif ()
