--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -327,6 +327,18 @@ else ()
   set(SOURCE_PREFIX "${CMAKE_CURRENT_LIST_DIR}/")
 endif ()
 
+# Pull the Git submodules.
+# Adapted from: https://cliutils.gitlab.io/modern-cmake/chapters/projects/submodule.html
+find_package(Git QUIET)
+if (GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
+  execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    RESULT_VARIABLE GIT_SUBMOD_RESULT)
+  if (NOT GIT_SUBMOD_RESULT EQUAL "0")
+    message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
+  endif ()
+endif ()
+
 # Build library and executables
 
 # Write the configuration file
