Update Aluminum include paths.
Note anything that includes Al.hpp or similar without aluminum/ will break.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,7 +420,7 @@ set(CMAKE_INSTALL_PREFIX "${REAL_CMAKE_INSTALL_PREFIX}")
 
 # Install directory
 
-set(INCLUDE_INSTALL_DIRS ${CMAKE_INSTALL_INCLUDEDIR}/aluminum)
+set(INCLUDE_INSTALL_DIRS ${CMAKE_INSTALL_INCLUDEDIR})
 set(LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
 set(CMAKE_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/aluminum)
 set(CMAKE_MODULE_LOCATION "\$\{CMAKE_CURRENT_LIST_DIR\}")
