Host-transfer vector collectives.

--- a/include/aluminum/ht/CMakeLists.txt
+++ b/include/aluminum/ht/CMakeLists.txt
@@ -1,15 +1,20 @@
 set_source_path(THIS_DIR_HEADERS
   allgather.hpp
+  allgatherv.hpp
   allreduce.hpp
   alltoall.hpp
+  alltoallv.hpp
   barrier.hpp
   base_state.hpp
   bcast.hpp
   communicator.hpp
   gather.hpp
+  gatherv.hpp
   reduce.hpp
   reduce_scatter.hpp
+  reduce_scatterv.hpp
   scatter.hpp
+  scatterv.hpp
   pt2pt.hpp
   )
 
