Make utils directory.

--- a/include/aluminum/CMakeLists.txt
+++ b/include/aluminum/CMakeLists.txt
@@ -8,7 +8,6 @@ set_source_path(THIS_DIR_HEADERS
   profiling.hpp
   trace.hpp
   tuning_params.hpp
-  utils.hpp
   )
 set_source_path(THIS_DIR_CUDA_HEADERS
   cuda.hpp
@@ -23,6 +22,8 @@ set_source_path(THIS_DIR_HOST_TRANSFER_HEADERS
 set_source_path(THIS_DIR_NCCL_HEADERS
   nccl_impl.hpp
   )
+
+add_subdirectory(utils)
 
 add_subdirectory(mpi)
 
