Add new StreamPool.

--- a/include/aluminum/cuda/CMakeLists.txt
+++ b/include/aluminum/cuda/CMakeLists.txt
@@ -4,6 +4,7 @@ set_source_path(THIS_DIR_CUDA_HEADERS
   gpu_status_flag.hpp
   gpu_wait.hpp
   helper_kernels.hpp
+  streams.hpp
   sync_memory.hpp
   )
 
