Explicitly add pthreads support.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -64,6 +64,7 @@ if (AL_ENABLE_TESTS)
     if (AL_HAS_CUDA AND NOT AL_HAS_ROCM)
       target_link_libraries(${_test_exe_name} PUBLIC cuda)
     endif()
+    target_link_libraries(${_test_exe_name} PRIVATE Threads::Threads)
   endforeach()
 
   # FIXME: Should any of these tests be enabled with ROCm?
@@ -72,6 +73,7 @@ if (AL_ENABLE_TESTS)
       test_stream_mem_ops.cpp ${TEST_HEADERS})
     target_link_libraries(test_stream_mem_ops.exe PRIVATE Al)
     target_link_libraries(test_stream_mem_ops.exe PUBLIC cuda)
+    target_link_libraries(${_test_exe_name} PRIVATE Threads::Threads)
   endif ()
 
   if (AL_HAS_MPI_CUDA_RMA AND NOT AL_HAS_ROCM)
@@ -86,5 +88,6 @@ if (AL_ENABLE_TESTS)
       test_rma_halo_exchange.exe SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/third_party/cxxopts/include)
     target_link_libraries(test_rma_halo_exchange.exe PRIVATE Al)
     target_link_libraries(test_rma_halo_exchange.exe PUBLIC cuda)
+    target_link_libraries(${_test_exe_name} PRIVATE Threads::Threads)
   endif ()
 endif ()
