Remove the headers from the add_library call.
Having them there would make them explicit dependencies of multiple
targets, which is forbidden by the add_custom_command docs.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,7 @@ if (AL_HAS_ROCM)
   # files. This should circumvent that issue.
   add_custom_target(HipifiedHeaders
     DEPENDS ${ALUMINUM_HIP_HEADERS})
-  hip_add_library(Al "${ALUMINUM_HIP_SOURCES}" "${ALUMINUM_HIP_HEADERS}")
+  hip_add_library(Al "${ALUMINUM_HIP_SOURCES}")
   add_dependencies(Al HipifiedHeaders)
   target_include_directories(Al PUBLIC
     $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
