Update Aluminum's CMake export

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,6 +254,7 @@ if (ALUMINUM_ENABLE_CUDA)
   if (ALUMINUM_ENABLE_NVPROF)
     if (NOT TARGET CUDA::nvToolsExt)
       find_package(NVTX REQUIRED)
+      set(AL_HAS_EXTERNAL_NVTX TRUE)
     endif ()
     set(AL_HAS_NVPROF ON)
   endif ()
